<resources>
    <string name="app_name">LA Registration Client</string>
    <string name="enter_your_data_below">Enter your data below</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="call_sign">Call sign (optional)</string>
    <string name="phone_number">Phone number</string>
    <string name="save_data">Save data</string>
    <string name="edit_data">Edit Data</string>
    <string name="saved_data">Saved data:</string>
    <string name="saved_name">Name -</string>
    <string name="saved_surname">Surname -</string>
    <string name="saved_call_sign">Call sign -</string>
    <string name="saved_phone_number">Phone number -</string>
    <string name="have_a_car">Have a car</string>
    <string name="mark_of_a_car">Mark of a car</string>
    <string name="model_of_a_car">Model of a car</string>
    <string name="registration_number_of_a_car">Registration number of a car</string>
    <string name="color_of_a_car">Color of a car</string>
    <string name="saved_mark_of_a_car">Mark of a car -</string>
    <string name="saved_model_of_a_car">Model of a car -</string>
    <string name="saved_registration_number_of_a_car">Registration number -</string>
    <string name="saved_color_of_a_car">Color of a car -</string>
    <string name="greeting_heading">Questionnaire of volunteer PSO Liza Alert Tomsk</string>
    <string name="greeting_asterisk">* Must be completed</string>
    <string name="full_name">Fullname</string>
    <string name="asterisk">" *"</string>
    <string name="my_answer">My answer</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="menu_profile_volunteer">Profile</string>
    <string name="phone_number_profile">Contact phone number (8 **********)</string>
    <string name="forum_nickname">Nick on the forum PSO \"Lisa Alert\" http://lizaalert.org (registration on the forum is required)</string>
    <string name="link_to_vk">Link to a page in VK (or a name in VK where you can be found)</string>
    <string name="address">Address of residence</string>
    <string name="pass_to_Seversk">Is there a pass to Seversk?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="phone_number_confidant">The contact phone number of the authorized person (the person we will call in case of any emergency with you is mom, dad, sister, roommate)</string>
    <string name="signs">Your signs (height, weight, hair color, eye color)</string>
    <string name="special_signs">Your special signs (glasses, visible scars, tattoos, birthmarks, moles)</string>
    <string name="health">Allergic reactions, other health features that we better know in advance</string>
    <string name="have_a_car_profile">Do you have a car (model, color, registration number)?</string>
    <string name="other_tech">Any other technique that could help us in our search (ATV, snowmobile, etc.)?</string>
    <string name="equipment">Do you have something that can help during the search (navigator, compass, flashlight, copier, multifunction device, etc.)?</string>
    <string name="search_format">Which search format is preferable for you?</string>
    <string name="forest">Trip to the forest</string>
    <string name="city">Work within the city</string>
    <string name="info_search">Info Support Networking</string>
    <string name="resource_help">Resource Assistance</string>
    <string name="send_profile">Send profile</string>
    <string name="greeting_body">Hello dear friends! The main task of the detachment Lisa Alert is the search for missing people. If you want to join the Liza Alertv squad in Tomsk, you need to register on the Liza Alert forum (http://lizaalert.org) and fill out this form. It is also necessary to install Telegram applications on your smartphone and add to the alert channel @ alert70 to receive notification of fees.</string>
    <string name="fill_all_fields_with_asterisk">All fields marked with an asterisk must be filled</string>
    <string name="ok_sending_profile">Profile sent successfully</string>
    <string name="no_network">No network connection available.</string>
    <string name="request_google_acc">This app needs to access your Google account (via Contacts).</string>
    <string name="request_google_play_services">This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app.</string>
    <string name="sending_request">Sending request ..</string>
    <string name="error_occurred">The following error occurred:</string>
    <string name="request_cancelled">Request cancelled.</string>
    <string name="fill_in_fields_info">Fill in the First Name, Last Name and Phone Number fields!</string>
    <string name="fill_in_fields_car">Fill in all the data about the car!</string>
    <string name="info_about_car">Mark, model, registration number, color</string>
    <string name="back_to_exit">Click again to exit.</string>
    <string name="patronymic_name">Patronymic name</string>
    <string name="city_village_etc">City, village, etc</string>
    <string name="street_avenue_alley_tract_etc">Street (avenue, alley, tract, etc)</string>
    <string name="number_of_house">Number of house</string>
    <string name="number_of_room">Number of room</string>
    <string name="error_occured_address_to_geo">Error converting addresses to coordinates</string>
    <string name="alert">Alert!</string>
    <string name="departure_time_title">TIME OF GATHERING:</string>
    <string name="departure_place_title">PLACE OF GATHERING:</string>
    <string name="departure_coordinator_title">COORDINATOR:</string>
    <string name="departure_inforg_title">INFORG:</string>
    <string name="departure_inforg_phone_title">INFORG PHONE NUMBER:</string>
    <string name="departure_forum_topic_title">FORUM TOPIC:</string>
    <string name="app_name_volunteer_profile">Profile</string>
    <string name="app_name_qrcode">QR code</string>
    <string name="app_name_all_departures">All alerts</string>
    <string name="app_name_detail_departure">Detail</string>
</resources>
